--- a/consultorio-medico/src/main/resources/application.properties
+++ b/consultorio-medico/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql:true
 
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validateMigrationNaming=false
+spring.flyway.locations=classpath:/db/migration
+
+
