--- a/consultorio-medico/src/main/resources/application.properties
+++ b/consultorio-medico/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/consultingroomiwa
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql:true
 
-flyway.driver=com.mysql.cj.jdbc.Driver
-flyway.url=jdbc:mysql://localhost:3306/consultingroomiwa
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validateMigrationNaming=false
+spring.flyway.locations=classpath:/db/migration
