--- a/consultorio-medico/src/main/resources/application.properties
+++ b/consultorio-medico/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql:true
+server.port=8081
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validateMigrationNaming=false
