--- a/consultorio-medico/src/main/resources/ValidationMessages.properties
+++ b/consultorio-medico/src/main/resources/ValidationMessages.properties
@@ -4,3 +4,6 @@ name.right.length=The minimum length for this field is 3 characters and the maxi
 address.right.length=The minimum length for this field is 3 characters and the maximum 500
 phoneNumber.right.length=The minimum length for this field is 10 characters and the maximum 13
 positive.tel.number=Please insert a real telephone number
+non.existent.appointment=The appointment does not exist yet
+date.taken=This date and hour has been taken by
+date.and.hour.available=The selected date and hour were available
