--- a/consultorio-medico/src/main/resources/ValidationMessages.properties
+++ b/consultorio-medico/src/main/resources/ValidationMessages.properties
@@ -5,5 +5,5 @@ address.right.length=The minimum length for this field is 3 characters and the m
 phoneNumber.right.length=The minimum length for this field is 10 characters and the maximum 13.
 positive.tel.number=Enter a valid phone number.
 not.found=The requested data does not exist yet.
-date.taken=This date and hour has been taken by
+date.taken=This date and hour has been taken.
 date.and.hour.available=The selected date and hour were available.
