--- a/consultorio-medico/src/main/resources/ValidationMessages.properties
+++ b/consultorio-medico/src/main/resources/ValidationMessages.properties
@@ -4,3 +4,4 @@ name.right.length=The minimum length for this field is 3 characters and the maxi
 address.right.length=The minimum length for this field is 3 characters and the maximum 500
 phoneNumber.right.length=The minimum length for this field is 10 characters and the maximum 13
 positive.tel.number=Please insert a real telephone number
+prescription.not.found=Medical prescription with the provided ID not found.
