--- a/consultorio-medico/src/main/resources/application.properties
+++ b/consultorio-medico/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/consultingroomiwa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=1234
 spring.jpa.show-sql:true
 
 spring.flyway.baseline-on-migrate=true
