Dunno if this sh1t works

--- a/consultorio-medico/src/main/resources/application.properties
+++ b/consultorio-medico/src/main/resources/application.properties
@@ -8,3 +8,8 @@ server.port=8081
 
 flyway.driver=com.mysql.cj.jdbc.Driver
 flyway.url=jdbc:mysql://localhost:3306/consultingroomiwa
+
+paypal.mode=sandbox
+paypal.client.id=AY76x4b14YliDnGmUas21ieai-t0zgWvRLhH3PO8gPsDKSdNUSBRCfs_eEG-xp5r_IgYRkbDyVv0UTVX
+paypal.client.secret=EDnC8haR0ze3gDimr90GBKVZlpA7hoqaXK_VaVtUBdSOzRa_5gICEYGca7YjmxSQCj2CHAz3T9zYTOQ7
+
